--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     color: #ccc;
     user-select: none;
     overflow: hidden;
-    background-image: url("../img/bg2.jpg");
+    background-image: url("../img/bg.jpg");
     background-size: cover;
     background-repeat: repeat-x;
 
