--- a/css/jet.css
+++ b/css/jet.css
@@ -23,14 +23,9 @@
     height: inherit;
     transform-style: preserve-3d;
     transform: rotateY(78deg) rotateX(14deg) rotateZ(-15deg);
-    animation-duration: 15s;
-    animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
     transition: 1s;
 }
 
-.jet__wing,
-.jet__tail,
 .jet__side {
     position: absolute;
     width: var(--jetWidth);
@@ -114,24 +109,24 @@
 }
 
 /* ---------------- крылья */
-.jet__wing {
+.jet__side_wing {
     width: 150px;
     color: red;
 }
 
-.jet__wing--left {
+.jet__side_wing--left {
     transform: rotateX(90deg) translateY(-50px) translateX(-150px) translateZ(25px);
     border-bottom-left-radius: 50%;
     border-top-right-radius: 10%;
 }
 
-.jet__wing--right {
+.jet__side_wing--right {
     transform: rotateX(90deg) translateY(-50px) translateX(100px) translateZ(25px);
     border-bottom-right-radius: 50%;
     border-top-left-radius: 10%;
 }
 
-.jet__wing::after {
+.jet__side_wing::after {
     content: "";
     position: absolute;
     top: 0;
@@ -141,15 +136,15 @@
     background-image: inherit;
 }
 
-.jet__wing--left::after {
+.jet__side_wing--left::after {
     left: 40px;
 }
-.jet__wing--right::after {
+.jet__side_wing--right::after {
     right: 40px;
 }
 
 /* маячки */
-.jet__wing::before {
+.jet__side_wing::before {
     content: "";
     position: absolute;
     top: 3px;
@@ -176,16 +171,16 @@
     }
 }
 
-.jet__wing--left::before {
+.jet__side_wing--left::before {
     left: 3px;
 }
 
-.jet__wing--right::before {
+.jet__side_wing--right::before {
     right: 3px;
 }
 
 /* ---------------- хвост */
-.jet__tail {
+.jet__side--tail {
     width: 60px;
     padding: 10px;
     justify-content: end;
@@ -198,7 +193,7 @@
     border-top-right-radius: 100%;
 }
 
-.jet__tail::before {
+.jet__side--tail::before {
     content: "";
     position: absolute;
     left: -20px;
@@ -210,7 +205,7 @@
 }
 
 /* ------------------- шасси */
-.jet__chassis {
+.jet__side_chassis {
     position: absolute;
     width : 25px;
     height : 25px;
@@ -220,22 +215,22 @@
     transition: 1s;
 }
 
-.jet__chassis--front {
+.jet__side_chassis--front {
     left: 50%;
     transform: translate(-50%, 50px) rotateX(30deg) rotateY(90deg);
 }
 
-.jet__chassis--left {
+.jet__side_chassis--left {
     left: 25%;
     transform: translateX(-50%) translateY(55px) translateZ(-100px) rotateY(90deg);
 }
 
-.jet__chassis--right {
+.jet__side_chassis--right {
     left: 75%;
     transform: translateX(-50%) translateY(55px) translateZ(-100px) rotateY(90deg);
 }
 
-.jet__chassis::before {
+.jet__side_chassis::before {
     content    : "";
     position   : absolute;
     top        : -100%;
