--- a/css/controls.css
+++ b/css/controls.css
@@ -33,3 +33,10 @@ input {
 #loop[type="checkbox"]:checked ~ .jet .jet__body {
     transform: rotateY(78deg) rotateX(380deg) rotateZ(-15deg);
 }
+
+/* петля*/
+#fire[type="checkbox"]:checked ~ .jet .jet__side_wing .jet__rocket{
+    transform: translateY(100vw);
+    height: 100px;
+    transition: 2s;
+}
