--- a/css/controls.css
+++ b/css/controls.css
@@ -34,7 +34,7 @@ input {
     transform: rotateY(78deg) rotateX(380deg) rotateZ(-15deg);
 }
 
-/* петля*/
+/* fire*/
 #fire[type="checkbox"]:checked ~ .jet .jet__side_wing .jet__rocket{
     transform: translateY(100vw);
     height: 100px;
