--- a/1 версия с checkbox управлением/css/style.css
+++ b/1 версия с checkbox управлением/css/style.css
@@ -33,18 +33,10 @@ body {
 }
 
 h1 {
-    margin: 70px auto 10px;
+    margin: 50px auto;
     text-align: center;
     color: gold;
 }
-
-.row-controls {
-    margin: 0 auto;
-    display: block;
-    text-align: center;
-    font-size: 20px;
-}
-
 
 .wrapper {
     position: relative;
